force-app/main/default/objects/Restuarant__c/Restuarant__c.object-meta.xml
<CustomObject>
    <label>Restuarant</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Confirmation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restuarants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>