force-app/main/default/objects/Restuarant__c/fields/Number_of_People__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People__c</fullName>
    <label>Number of People</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>