force-app/main/default/objects/Restuarant__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reservation</label>
    <type>Date</type>
</CustomField>