force-app/main/default/objects/Restuarant__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Restuarants</relationshipLabel>
    <relationshipName>Restaurants</relationshipName>
    <type>Lookup</type>
</CustomField>